--- a/index.html
+++ b/index.html
@@ -478,9 +478,7 @@
 
     <footer class="footer">
 
-        <div class="container">
-
-            <div class="footer-inner">
+        <div class="footer-container"> 
 
             <div class="footer-logo-text">
                 <a class="logo-footer" href="./index.html">Web<span class="logo-footer-accent">Studio</span></a>
@@ -488,14 +486,12 @@
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
 
-            <div>
-                    <h4 class="footer-social-media">Social media</h4>
-
-                    <div class="footer-section-socials">
+            <div class="footer-socials">
+                    <p class="footer-social-media">Social media</p>
 
                         <ul class="footer-section-socials-menu">
 
-                            <li>
+                            <li class="footer-section-socials-item">
 
                                     <a class="footer-section-socials-link" href="#" target="_blank">
                                         <svg width="24" height="24" class="footer-section-icon">
@@ -504,7 +500,7 @@
                                     </a>
                             </li>
 
-                            <li>
+                            <li class="footer-section-socials-item">
 
                                     <a class="footer-section-socials-link" href="#" target="_blank">
                                         <svg width="24" height="24" class="footer-section-icon">
@@ -513,7 +509,7 @@
                                     </a>
                             </li>
 
-                            <li>
+                            <li class="footer-section-socials-item">
                                     <a class="footer-section-socials-link" href="#" target="_blank">
                                         <svg width="24" height="24" class="footer-section-icon">
                                             <use href="./images/icons.svg#icon-facebook-1"></use>
@@ -521,7 +517,7 @@
                                     </a>
                             </li>
 
-                            <li>
+                            <li class="footer-section-socials-item">
                                     <a class="footer-section-socials-link" href="#" target="_blank">
                                         <svg width="24" height="24" class="footer-section-icon">
                                             <use href="./images/icons.svg#icon-linkedin-1"></use>
@@ -530,12 +526,11 @@
                             </li>
 
                         </ul>
-
-                    </div>
-
             </div>
-            </div>
+
+
         </div>
+
     </footer>
 
     <div class="backdrop">
